# balance_robot_control

./: CMakeLists.txt  README.md  package.xml  workspace.code-workspace
cfg/: gain.cfg  o.yaml
config/: balance_robot_control.yaml  bobble.yaml
dynamic_config/: gain.cfg  gain_bobble.cfg
launch/: all_display.launch  balance_robot_control.launch  balance_robot_control_tb.launch  bobble_control.launch  bobble_imu_control.launch  control.launch  control_bobble.launch  display.launch  display.rviz  imu_control.launch  publish_imu_complementary_filtered.launch  publish_imu_filtered_cpp.launch  publish_imu_filtered_py.launch  publish_imu_madgwick_filtered.launch  publish_imu_madgwick_filtered_cpp.launch  publish_imu_madgwick_filtered_py.launch  publish_lidar.launch  robot_display_simplemodel.launch  urdf.rviz
models/meshes/: base_link_simple.stl
msg/: BobbleBotStatus.msg
param/: motor_control_param.yaml
script/: balance_robot_control.yaml  control_param.yaml
src/: balance_robot_control tb6612.h  balance_robot_control.cpp  balance_robot_control.h  balance_robot_control.hpp  balance_robot_control_tb6612.cpp  balance_robot_control_tb6612.h  base_robot_control.cpp  base_robot_control.hpp  base_robot_control_drv8833.cpp  base_robot_control_drv8833.hpp  base_robot_control_tb.cpp  base_robot_control_tb.hpp  drv8833.hpp  encoder_counter.cpp  imu.h  motor_control.cpp  motor_control_with_imu.cpp  mpu6050.cpp  mpu6050.h  tb6612.hpp
src/Bobble/: BalanceBaseController.cpp  BalanceBaseController.h  BalanceControllerData.h  BalanceRealController.cpp  BalanceRealController.h  control_main_bobble.cpp
src/Filter/: Filter.cpp  HighPassFilter.cpp  LowPassFilter.cpp  LowPassFilter.h  PIDFilters.cpp  PidControl.cpp  PidControl.h
src/IMU/: MadgwickAHRS.cpp  mpu6050.cpp
